[build-system]
requires = [
    'setuptools>=61.0',
    'wheel',
    'setuptools_scm>=6.0',
    'tomli',
]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "spacy>=3.7.0,<3.8.0",
    "ja_core_news_lg @ https://github.com/explosion/spacy-models/releases/download/ja_core_news_lg-3.7.0/ja_core_news_lg-3.7.0-py3-none-any.whl#sha256=f08eecb4d40523045c9478ce59a67564fd71edd215f32c076fa91dc1f05cc7fd"
]

name = "kairyou"
version = "v1.4.0"
authors = [
  { name="Bikatr7", email="Tetralon07@gmail.com" },
]
description = "Quickly preprocesses Japanese text using NLP/NER from SpaCy for Japanese translation or other NLP tasks."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Bikatr7/Kairyou"
Issues = "https://github.com/Bikatr7/Kairyou/issues"
