[build-system]
requires = [
    'setuptools>=61.0',
    'wheel',
    'setuptools_scm>=6.0',
    'tomli',
]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "spacy==3.7.5",
    "regex>=2023.3.23"
]

name = "kairyou"
version = "v1.6.7"
authors = [
  { name="Bikatr7", email="Bikatr7@proton.me" },
]
description = "Quickly preprocesses Japanese text using NLP/NER from SpaCy for Japanese translation or other NLP tasks."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Operating System :: OS Independent",
]


[project.urls]
Homepage = "https://github.com/Bikatr7/Kairyou"
Issues = "https://github.com/Bikatr7/Kairyou/issues"
